[gd_scene load_steps=5 format=3 uid="uid://b464w5qqal0bx"]

[ext_resource type="Script" path="res://addons/goat/helper_scenes/Inventory.gd" id="1"]
[ext_resource type="Environment" uid="uid://dvmrow24o73ah" path="res://addons/goat/environments/inventory_environment.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://bhat28de4h0ds" path="res://addons/goat/helper_scenes/RayCast3D.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://ceodwhqhhotug" path="res://addons/goat/helper_scenes/InventoryItems.tscn" id="4"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(600, 600)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Inventory3D" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/Inventory3D"]
current = true
far = 5.0

[node name="RayCast3D" parent="SubViewportContainer/SubViewport/Inventory3D/Camera3D" instance=ExtResource("3")]
category = "inventory"
supports_alternative_interaction = false

[node name="Pivot" type="Node3D" parent="SubViewportContainer/SubViewport/Inventory3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/Inventory3D"]
environment = ExtResource("2")

[node name="InventoryItems" parent="." instance=ExtResource("4")]
layout_mode = 1
mouse_filter = 2

[connection signal="gui_input" from="SubViewportContainer" to="." method="_on_ViewportContainer_gui_input"]
